--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -190,11 +190,12 @@ jobs:
           # CONFIG_PACKAGE_luci-app-nlbwmon=y
           # CONFIG_PACKAGE_luci-app-sqm=y
           # CONFIG_PACKAGE_luci-app-unblockmusic=y
-          # CONFIG_PACKAGE_luci-app-upnp=y
+          CONFIG_PACKAGE_luci-app-upnp=y
           # CONFIG_PACKAGE_luci-app-vsftpd=y
           # CONFIG_PACKAGE_luci-app-wol=y
-          # CONFIG_PACKAGE_luci-app-ramfree=y
-          # CONFIG_PACKAGE_luci-app-zerotier=y
+          CONFIG_PACKAGE_luci-app-ramfree=y
+          CONFIG_PACKAGE_luci-app-zerotier=y
+          CONFIG_PACKAGE_luci-app-ocserv=y
           EOF
 
           # LuCI主题:
